--- a/css/style.css
+++ b/css/style.css
@@ -1980,7 +1980,7 @@ tr:hover {
 .info-content p strong {
     color: var(--dark);
     font-weight: 600;
-    white-space: nowrap;
+    white-space: normal;
 }
 
 /* ===== Chart Explanations ===== */
